Add mail lib and setup Mail port