@@ -62,11 +62,10 @@ public class CreateCustomerController extends HttpServlet {
             
         }
 
-        // BIỆN PHÁP TẬP TRUNG: Nếu có bất kỳ lỗi nào ở trên, nạp data 1 lần duy nhất rồi forward
         if (errorMsg != null) {
-            request.setAttribute("error", errorMsg); // Gửi mã lỗi chi tiết của trường bị sai về JSP            
+            request.setAttribute("error", errorMsg);    
             request.getRequestDispatcher("/views/customer/customer_create.jsp").forward(request, response);
-            return; // Chặn đứng không cho xuống phần lưu DB
+            return;
         }
 
         try {
@@ -92,7 +91,7 @@ public class CreateCustomerController extends HttpServlet {
 
             String msg = customerService.createCustomerDTO(u, c);
 
-            if (msg == null || msg.trim().isBlank()) {
+            if (msg == null || msg.trim().isEmpty()) {
                 request.setAttribute("success", true);
             } else {
                 request.setAttribute("error", "Create failed."+ msg + (customerService.getLastError() != null ? customerService.getLastError() : "Unknown error"));
